[package]
name = "matter"
version = "0.1.0-alpha2"
authors = ["Nicholas Young <nyoung@uptime.ventures>"]
description = "Universal frontmatter parser."
repository = "https://gitlab.com/secretfader/matter"
keywords = ["frontmatter", "yaml", "json", "toml"]
readme = "README.md"
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
serde = { version = "1.0.114", optional = true }
serde_json = { version = "1.0.56", optional = true }
serde_yaml = { version = "0.8.13", optional = true }
toml = { version = "0.5.6", optional = true }
regex = "1.3.9"
lazy_static = "1.4.0"
structopt = "0.3.15"
thiserror = "1.0.20"

[features]
default = ["toml", "json", "yaml"]
json = ["serde", "serde_json"]
yaml = ["serde", "serde_yaml"]

[[bin]]
path = "src/main.rs"
name = "matter"
