[package]
name = "matter"
version = "0.1.0-alpha4"
authors = ["Nicholas Young <nicholas@nicholaswyoung.com>"]
description = "Universal frontmatter parser."
repository = "https://gitlab.com/secretfader/matter"
keywords = ["frontmatter", "yaml", "json", "toml"]
readme = "README.md"
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
regex = "1.3.9"
lazy_static = "1.4.0"
